# HeuristicsAlgorithmCVRPSolver

./: README.md  main.py  pyproject.toml  requirements.txt
src/santa_challenge/algorithms/: greedy_kd_tree.py
src/santa_challenge/utils/: config.py  data_loader.py  metrics.py
